--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.14",
-    "@react-navigation/stack": "^6.3.25",
-    "expo": "~50.0.8",
+    "@expo/metro-runtime": "~3.1.3",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^6.4.1",
+    "expo": "^51.0.18",
+    "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-dom": "18.2.0",
+    "react-native": "^0.73.8",
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
